test/test_suite/errors/error_semantic_fails.c3
faultdef

    A,
    A // #error: would shadow a previous declaration
;
